--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Site Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Welcome to My Site</h1>
+    <p>This is a sample paragraph.</p>
 </body>
 </html>
